adding jupyter labs

--- a/teaching/INSA_GPs/labs/R/GP_lab_kernels_R_students.ipynb
+++ b/teaching/INSA_GPs/labs/R/GP_lab_kernels_R_students.ipynb
@@ -398,7 +398,7 @@
     "collapsed": true
    },
    "source": [
-    "**Question 8.**  Change the kernel as well as the values in ``param``. What is the effect of\n",
+    "**Question 9.**  Change the kernel as well as the values in ``param``. What is the effect of\n",
     "- $\\sigma^2$ on $m(x)$? Can you prove this result?\n",
     "- $\\sigma^2$ on the conditional variance $v(x) = c(x, x)$? Can you prove this result?\n",
     "- $\\theta$ on $m(x)$ (try (very) small and large values)?\n",
@@ -501,9 +501,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Bonus question**\n",
-    "\n",
-    "12. After testing different kernels and various values for $\\sigma^2$ and $\\theta$, which one would you recommend?"
+    "**Bonus question.** After testing different kernels and various values for $\\sigma^2$ and $\\theta$, which one would you recommend?"
    ]
   }
  ],
