correcting a minor typo

--- a/teaching/INSA_GPs/labs/python/GP_lab_kernels_Python_students.ipynb
+++ b/teaching/INSA_GPs/labs/python/GP_lab_kernels_Python_students.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this lab session, your are free to use the language of your choice (e.g. R or Python). In this notebook we propose Python implementations."
+    "For this lab session, you are free to use the language of your choice (e.g. R or Python). In this notebook we propose Python implementations."
    ]
   },
   {
