updating lab kernels

--- a/teaching/INSA_GPs/labs/python/GP_lab_kernels_Python_students.ipynb
+++ b/teaching/INSA_GPs/labs/python/GP_lab_kernels_Python_students.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this lab session, you are free to use the language of your choice (e.g. R or Python). In this notebook we propose Python implementations."
+    "For this lab session, your are free to use the language of your choice (e.g. R or Python). In this notebook we propose Python implementations."
    ]
   },
   {
@@ -30,7 +30,7 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.spatial.distance import cdist\n",
     "\n",
-    "plt.rc('text', usetex=True)\n",
+    "#plt.rc('text', usetex=True)\n",
     "%matplotlib inline"
    ]
   },
@@ -42,41 +42,41 @@
     "\n",
     "We recall some usual covariance functions on $k: \\mathbb{R} \\times \\mathbb{R} \\to \\mathbb{R}$:\n",
     "- Squared Exponential (SE):\n",
-    "$$ k(x,y) = \\sigma^2 \\exp\\left( - \\frac{(x-y)^2}{2 \\theta^2} \\right)$$\n",
+    "$$k(x,x') = \\sigma^2 \\exp\\left( - \\frac{(x-x')^2}{2 \\theta^2} \\right)$$\n",
     "\n",
     "- Matérn 5/2:\n",
-    "$$ k(x,y) = \\sigma^2 \\left(1+\\frac{\\sqrt{5} |x-y|}{\\theta}+\\frac{5 |x-y|^2}{3 \\theta^2}\\right)  \\exp\\left( - \\frac{\\sqrt{5}|x-y|}{\\theta} \\right) $$ \n",
+    "$$k(x,x') = \\sigma^2 \\left(1+\\frac{\\sqrt{5} |x-x'|}{\\theta}+\\frac{5 |x-x'|^2}{3 \\theta^2}\\right)  \\exp\\left( - \\frac{\\sqrt{5}|x-x'|}{\\theta} \\right)$$ \n",
     "\n",
     "- Matérn 3/2:\n",
-    "$$ k(x,y) = \\sigma^2 \\left(1+\\frac{\\sqrt{3} |x-y|}{\\theta}\\right)  \\exp\\left( - \\frac{\\sqrt{3}|x-y|}{\\theta} \\right) $$ \n",
+    "$$k(x,x') = \\sigma^2 \\left(1+\\frac{\\sqrt{3} |x-x'|}{\\theta}\\right)  \\exp\\left( - \\frac{\\sqrt{3}|x-x'|}{\\theta} \\right)$$ \n",
     "\n",
     "- Exponential:\n",
-    "$$ k(x,y) = \\sigma^2 \\exp\\left( - \\frac{|x-y|}{\\theta} \\right)  $$ \n",
+    "$$k(x,x') = \\sigma^2 \\exp\\left( - \\frac{|x-x'|}{\\theta} \\right)$$ \n",
     "\n",
     "- Brownian:\n",
-    "$$ k(x,y) = \\sigma^2 \\min(x, y) $$ \n",
+    "$$k(x,x') = \\sigma^2 \\min(x, x')$$ \n",
     "\n",
     "- White noise:\n",
-    "$$ k(x,y) = \\sigma^2 \\delta_{x,y} $$ \n",
+    "$$k(x,x') = \\sigma^2 \\delta_{x,x'}$$ \n",
     "\n",
     "- Constant:\n",
-    "$$ k(x,y) = \\sigma^2 $$ \n",
+    "$$k(x,x') = \\sigma^2$$ \n",
     "\n",
     "- Linear:\n",
-    "$$ k(x,y) = \\sigma^2 x y $$ \n",
+    "$$k(x,x') = \\sigma^2 x x'$$ \n",
     "\n",
     "- Cosine:\n",
-    "$$ k(x,y) = \\sigma^2 \\cos\\left(\\frac{x-y}{\\theta}\\right) $$ \n",
+    "$$k(x,x') = \\sigma^2 \\cos\\left(\\frac{x-x'}{\\theta}\\right)$$ \n",
     "\n",
     "- Sinc:\n",
-    "$$ k(x,y) = \\sigma^2 \\frac{\\theta}{x-y} \\sin\\left(\\frac{x-y}{\\theta}\\right) $$ "
+    "$$k(x,x') = \\sigma^2 \\frac{\\theta}{x-x'} \\sin\\left(\\frac{x-x'}{\\theta}\\right)$$ "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question 1.** For at least three kernels of your choice, write a function that takes as input the vectors ``x``, ``y`` and ``param`` and that returns the matrix with general terms $k(x_i, y_j)$."
+    "**Question 1.** For at least three kernels of your choice, write a function that takes as input the vectors ``x``, ``x'`` and ``param`` and that returns the matrix with general terms $k(x_i, x'_j)$."
    ]
   },
   {
@@ -220,8 +220,8 @@
     "\n",
     "$$\n",
     "\\begin{array}{ll}\n",
-    "\t\\text{Sum of kernels:} & k(x, y) = k_1(x, y) + k_2(x, y) \\\\\n",
-    "\t\\text{Product of kernels:} & k(x, y) = k_1(x, y) \\times k_2(x, y)\n",
+    "\t\\text{Sum of kernels:} & k(x, x') = k_1(x, x') + k_2(x, x') \\\\\n",
+    "\t\\text{Product of kernels:} & k(x, x') = k_1(x, x') \\times k_2(x, x')\n",
     "\\end{array}\t\n",
     "$$\n",
     "\n",
@@ -263,7 +263,7 @@
     "\n",
     "$$m(x) = k(x, X) k(X,X)^{-1} Y$$\n",
     "\n",
-    "$$c(x,y) = k(x,y) - k(x, X) k(X,X)^{-1} x(X,y)$$\n"
+    "$$c(x,x') = k(x,x') - k(x, X) k(X,X)^{-1} k(X,x')$$\n"
    ]
   },
   {
